--- a/repositories/src/main/resources/application.conf
+++ b/repositories/src/main/resources/application.conf
@@ -2,6 +2,7 @@ postgresql = {
   driver = "org.postgresql.Driver"
   url = "jdbc:postgresql://localhost:5432/BookBotDB"
   user = "postgres"
+  password = "1234"
   connectionTimeout = 10000
 }
 
