Added password to local db.

--- a/repositories/src/main/resources/application.conf
+++ b/repositories/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 postgresql = {
   driver = "org.postgresql.Driver"
-  url = "jdbc:postgresql://localhost:5432/BookBotDB"
+  url = "jdbc:postgresql://127.0.0.1:5432/BookBotDB"
   user = "postgres"
   password = "1234"
   connectionTimeout = 10000
